--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <a href="#">Trilhas</a>
         <a href="#">Dicas</a>
         <a href="#">Mentorias</a>
+        <a href="#">Parcerias</a>
     </nav>
     <main>
         <h2>Bem vindo(a) ao Emprega //DEV que vai te ajudar a decolar na carreira da tecnologia.</h2>
