--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
         <p>É tech pra você aproveitar e decolar </p>
     </header>
     <nav>
-        <a href="#">Sobre o Emprega//DEV</a>
+        <a href="file:///C:/Users/amand/Desktop/UPX2/emprega_dev/sobre.html" target="_blank">Sobre o Emprega//DEV</a>
         <a href="#">Trilhas</a>
         <a href="#">Dicas</a>
         <a href="#">Mentorias</a>
         <a href="#">Parcerias</a>
+        <a href="#">Vagas Disponíveis</a>
     </nav>
     <main>
         <h2>Bem vindo(a) ao Emprega //DEV que vai te ajudar a decolar na carreira da tecnologia.</h2>
