--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <nav>
         <a href="sobre.html" target="_blank">Sobre o Emprega//DEV</a>
-        <a href="trilhas.html">Trilhas</a>
-        <a href="#">Dicas2</a>
+        <a href="trilhas.html" target="_blank">Trilhas</a>
+        <a href="#">Dicas</a>
         <a href="#">Mentorias</a>
         <a href="#">Parcerias</a>
     </nav>
