Criação dos Temas de Trilhas 5 a 7
Criei as páginas no modelo padrão para inserir as primeiras informações.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <a href="#">Sobre o Emprega//DEV</a>
         <a href="#">Trilhas</a>
-        <a href="#">Dicas2</a>
+        <a href="#">Dicas</a>
         <a href="#">Mentorias</a>
         <a href="#">Parcerias</a>
     </nav>
