--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <nav>
         <a href="sobre.html" target="_blank">Sobre o Emprega//DEV</a>
         <a href="trilhas.html" target="_blank">Trilhas</a>
-        <a href="#">Dicas</a>
+        <a href="">Dicas</a>
         <a href="#">Mentorias</a>
         <a href="#">Parcerias</a>
     </nav>
     <main>
-        <h2>Bem vindo(a) ao Emprega //DEV que vai te ajudar a decolar na carreira da tecnologia.</h2>
+        <h2>Bem vindo(a) ao Emprega //DEV a plataforma que vai te ajudar a decolar na carreira de tecnologia.</h2>
         <p>Vamos embarcar juntos nessa missão e conquistar sua primeira oportunidade no mercado de tecnologia.</p>
         <p>Aqui você encontra tudo que precisa saber sobre as carreiras que são possiveis seguir na área de tecnologia, nossa missão é ajudar você a encontrar qual carreira faz match com seu perfil e te orientar o que é necessário aprender para seguir carreira na área escolhida por você.</p>
         <p>Sim, aqui você vai conhecer melhor cada carreira na área de tecnologia e é você que escolhe onde vai trilhar no caminh do sucesso</p>
