--- a/desenvolvedorDeSoftware.html
+++ b/desenvolvedorDeSoftware.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=], initial-scale=1.0">
     <title>Desenvolvedor de Software</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -39,5 +40,8 @@
         <h2>Média salarial</h2>
         <p>A média salarial para profissionais nessa área é de entre R$ 30.000 e R$ 60.000 por ano.</p>
     </main>
+    <footer>
+        Site desenvolvido para UPX 2
+     </footer> 
 </body>
 </html>
