--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <img src="#" alt="#">
         </picture>
     </main>
-    <footer></footer>
+    <footer>
+       Site desenvolvido para UPX 2
+    </footer> 
 </body>
 </html>
