--- a/trilhas.html
+++ b/trilhas.html
@@ -47,15 +47,15 @@
         <h3>Desenvolvedor Web</h3>
     </a>
     <p>Cria e mantém sites e aplicativos da web. Trabalha com linguagens de marcação (HTML), estilização (CSS) e programação (JavaScript), além de frameworks e bibliotecas como React, Angular e Vue.js.</p>
-    <a href="">
+    <a href="administradorDeSitemas.html">
         <h3>Administrador de Sistemas</h3>
     </a>
     <p>Gerencia a infraestrutura de tecnologia da informação de uma organização. Instala, configura e mantém servidores, redes, sistemas operacionais e outros componentes de TI.</p>
-    <a href="">
+    <a href="analistaDeQA.html">
         <h3>Analista de QA (Qualidade de Software)</h3>
     </a>
     <p>Responsável por garantir a qualidade e funcionalidade de sistemas de software. Realiza testes de software, identifica e relata bugs, e colabora com desenvolvedores para corrigir problemas.</p>
-    <a href="">
+    <a href="analisaUxUI.html">
         <h3>Designer de Experiência do Usuário (UX) e Designer de Interface do Usuário (UI)</h3>
     </a>
     <p>Trabalham juntos para criar interfaces intuitivas e agradáveis para aplicativos e sites. O UX se concentra na experiência do usuário, enquanto o UI se concentra no design visual e na interação do usuário com a interface.</p>
