--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <p>É tech pra você aproveitar e decolar </p>
     </header>
     <nav>
-        <a href="sobre.html" target="_blank">Sobre o Emprega//DEV</a>
-        <a href="trilhas.html" target="_blank">Trilhas</a>
-        <a href="">Dicas</a>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="#">Dicas</a>
         <a href="#">Mentorias</a>
         <a href="#">Parcerias</a>
     </nav>
