--- a/trilhas.html
+++ b/trilhas.html
@@ -19,7 +19,7 @@
      
     <h2> Top 10 carreiras mais seguidas na área de tecnologia</h2>
 
-    <a href="desenvolvedorDeSoftware.html">
+    <a href="desenvolvedorDeSoftware.html" target="_blank">
         <h3> Desenvolvedor de Software </h3>
     </a>
     <p>Responsável por criar, testar e manter sistemas e aplicativos de software. Podem se especializar em diferentes linguagens de programação, como Java, Python, JavaScript, entre outras.</p>
