--- a/administradorDeSitemas.html
+++ b/administradorDeSitemas.html
@@ -10,7 +10,13 @@
     <header>
         <h1>Administrador de Sistemas</h1>
     </header>
-    
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="#">Dicas</a>
+        <a href="#">Mentorias</a>
+        <a href="#">Parcerias</a>
+    </nav>
     <main>
         <h2>Descrição das atividades</h2>
         <p> Um administrador de sistemas é responsável por coordenar ambientes computacionais, implantado e documentando rotinas de projetos, controlando níveis de serviço tanto
