--- a/analisaUxUI.html
+++ b/analisaUxUI.html
@@ -10,7 +10,13 @@
     <header>
         <h1>Analista de UX/UI</h1>
     </header>
-    
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="#">Dicas</a>
+        <a href="#">Mentorias</a>
+        <a href="#">Parcerias</a>
+    </nav>
     <main>
         <h2>Descrição das atividades</h2>
         <p> Um Analista de UX/UI é responsável por criar uma experiência positiva para os usuários ao interagirem com produtos digitais, ele é focado em entender suas necessidades, 
