--- a/analistaDeQA.html
+++ b/analistaDeQA.html
@@ -10,7 +10,13 @@
     <header>
         <h1>Analista de QA</h1>
     </header>
-    
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="#">Dicas</a>
+        <a href="#">Mentorias</a>
+        <a href="#">Parcerias</a>
+    </nav>
     <main>
         <h2>Descrição das atividades</h2>
         <p> Analista Quality Assurance (QA) é o responsável pelas atividades que garantem a qualidade nos processos de desenvolvimento; ele define, monitora, avalia e certifica os processos de 
