--- a/arquitetoDeSolucoes.html
+++ b/arquitetoDeSolucoes.html
@@ -10,7 +10,13 @@
     <header>
         <h1>Arquiteto de Soluções</h1>
     </header>
-    
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="#">Dicas</a>
+        <a href="#">Mentorias</a>
+        <a href="#">Parcerias</a>
+    </nav>
     <main>
         <h2>Descrição das atividades</h2>
         <p>A arquitetura de soluções é o processo de concepção de soluções personalizadas para atender às necessidades específicas de uma empresa.
