--- a/cientistaDeDados.html
+++ b/cientistaDeDados.html
@@ -10,7 +10,13 @@
     <header>
         <h1>Cientista de dados</h1>
     </header>
-    
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="#">Dicas</a>
+        <a href="#">Mentorias</a>
+        <a href="#">Parcerias</a>
+    </nav>
     <main>
         <h2>Descrição das atividades</h2>
         <p>Um cientista de dados é um profissional especializado em analisar e interpretar grandes volumes de dados para extrair insights e informar decisões estratégicas. O processo envolve a coleta, limpeza e análise dos dados, utilizando estatística e machine learning para desenvolver modelos preditivos. Eles também se encarregam de visualizar os dados de forma compreensível e comunicar os resultados eficazmente para as partes interessadas da organização, ajudando a orientar ações baseadas em dados concretos. Em resumo, o cientista de dados transforma dados brutos em informações úteis que podem impulsionar melhorias e inovações dentro de uma empresa.</p>
