--- a/desenvolvedorDeSoftware.html
+++ b/desenvolvedorDeSoftware.html
@@ -10,7 +10,13 @@
     <header>
         <h1>Desenvolvedor de Software</h1>
     </header>
-    
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="#">Dicas</a>
+        <a href="#">Mentorias</a>
+        <a href="#">Parcerias</a>
+    </nav>
     <main>
         <h2>Descrição das atividades</h2>
         <p>A função do Desenvolvedor de Software na área da tecnologia envolve a criação, manutenção e melhoria de programas de computador e aplicativos. Eles geralmente começam com a compreensão dos requisitos do cliente ou do projeto, depois projetam uma solução, escrevem código para implementar essa solução e testam o software para garantir que funcione corretamente.</p>
