--- a/desenvolvedorWeb.html
+++ b/desenvolvedorWeb.html
@@ -9,7 +9,13 @@
     <header>
         <h1>Desenvolvedor Web</h1>
     </header>
-    
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="#">Dicas</a>
+        <a href="#">Mentorias</a>
+        <a href="#">Parcerias</a>
+    </nav>
     <main>
         <h2>Descrição das atividades</h2>
         <p>Um desenvolvedor web é um profissional que cria e mantém sites e aplicativos para a internet. Eles utilizam linguagens de programação como HTML, 
