--- a/dicas.html
+++ b/dicas.html
@@ -10,7 +10,13 @@
     <header>
         <h1>Dicas</h1>
     </header>
-    
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="#">Dicas</a>
+        <a href="#">Mentorias</a>
+        <a href="#">Parcerias</a>
+    </nav>
     <main>
         <h2>3 Dicas de plataformas para buscar conhecimento na área de tecnologia:</h2>
         <p>Você encontrará canais no Youtube com muitos ensinamento de forma gratuita como:<br>
