--- a/engenheiroDeDados.html
+++ b/engenheiroDeDados.html
@@ -10,7 +10,13 @@
     <header>
         <h1>Engenheiro de dados</h1>
     </header>
-    
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="#">Dicas</a>
+        <a href="#">Mentorias</a>
+        <a href="#">Parcerias</a>
+    </nav>
     <main>
         <h2>Descrição das atividades</h2>
         <p>Um engenheiro de dados é um profissional especializado em gerenciar todo o ciclo de vida dos dados em uma organização. Eles lidam desde a coleta e armazenamento até a análise e visualização dos dados. Suas responsabilidades incluem coletar dados de várias fontes, armazená-los de forma eficiente e segura, limpar e preparar os dados para análise, integrar dados de diferentes fontes, processar dados em tempo real quando necessário, analisar dados em busca de insights úteis e garantir a segurança e conformidade dos dados com regulamentos de privacidade.</p>
