--- a/engenheiroDeIa.html
+++ b/engenheiroDeIa.html
@@ -10,7 +10,13 @@
     <header>
         <h1>Engenheiro de IA</h1>
     </header>
-    
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="#">Dicas</a>
+        <a href="#">Mentorias</a>
+        <a href="#">Parcerias</a>
+    </nav>
     <main>
         <h2>Descrição das atividades</h2>
         <p>Engenheiros de IA desenvolvem e implementam sistemas de inteligência artificial. Eles pesquisam e desenvolvem algoritmos de aprendizado de máquina, preparam dados, treinam modelos de IA e os integram em aplicativos. Também são responsáveis por testar e manter os sistemas de IA para garantir desempenho e eficácia contínuos.</p>
