--- a/sobre.html
+++ b/sobre.html
@@ -11,6 +11,13 @@
         <h1>Emprega // DEV</h1>
         <p>É tech pra você aproveitar e decolar </p>
     </header>
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="#">Dicas</a>
+        <a href="#">Mentorias</a>
+        <a href="#">Parcerias</a>
+    </nav>
     <main>
         <h2>Sobre o Emprega</h2>
         <p>É uma plataforma dedicada a orientar e facilitar a jornada profissional na área de tecnologia. Ele oferece trilhas de carreira personalizadas, auxiliando os usuários a identificar os cursos e formações necessárias para alcançar seus objetivos profissionais. Ao escolher uma trilha específica, os candidatos recebem recomendações sobre os cursos mais relevantes e as habilidades essenciais a serem desenvolvidas.</p>
