--- a/engenheiroDeSegurancaDaInformacao.html
+++ b/engenheiroDeSegurancaDaInformacao.html
@@ -10,7 +10,13 @@
     <header>
         <h1>Engenheiro de Segurança da Informação</h1>
     </header>
-    
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="#">Dicas</a>
+        <a href="#">Mentorias</a>
+        <a href="#">Parcerias</a>
+    </nav>
     <main>
         <h2>Descrição das atividades</h2><br>
         <p>Um engenheiro de segurança da informação desempenha um papel crucial na salvaguarda dos dados que fluem através das redes, 
