--- a/trilhas.html
+++ b/trilhas.html
@@ -62,7 +62,7 @@
     </a>
     <p>Responsável por garantir a qualidade e funcionalidade de sistemas de software. Realiza testes de software, identifica e relata bugs, e colabora com desenvolvedores para corrigir problemas.</p>
     <a href="analisaUxUI.html" target="_blank">
-        <h3>Designer de Experiência do Usuário (UX) e Designer de Interface do Usuário (UI)</h3>
+        <h3>Analista de UX/UI</h3>
     </a>
     <p>Trabalham juntos para criar interfaces intuitivas e agradáveis para aplicativos e sites. O UX se concentra na experiência do usuário, enquanto o UI se concentra no design visual e na interação do usuário com a interface.</p>
 </article>
