--- a/cientistaDeDados.html
+++ b/cientistaDeDados.html
@@ -41,5 +41,8 @@
         <h2>Média salarial</h2>
         <p>A média salarial para profissionais nessa área é de entre R$ 48.000 e R$ 84.000 por ano.</p>
     </main>
+    <footer>
+        Site desenvolvido para UPX 2
+     </footer>
 </body>
 </html>
