--- a/desenvolvedorWeb.html
+++ b/desenvolvedorWeb.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=], initial-scale=1.0">
-    <title>Nome da função</title>
+    <title>Desenvolvedor Web</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
