--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <a href="sobre.html">Sobre o Emprega//DEV</a>
         <a href="trilhas.html">Trilhas</a>
-        <a href="#">Dicas</a>
+        <a href="dicas.html">Dicas</a>
         <a href="#">Mentorias</a>
         <a href="#">Parcerias</a>
     </nav>
