--- a/desenvolvedorWeb.html
+++ b/desenvolvedorWeb.html
@@ -41,14 +41,14 @@
             JavaScript é a linguagem de programação fundamental para a construção de interatividade em sites e aplicativos web. Um curso dedicado a JavaScript 
             cobrirá desde conceitos básicos até tópicos avançados, como manipulação de DOM e desenvolvimento de aplicativos web.<br>
 
-            <br><li>Curso de Frameworks:</li>
+            <br><li>Curso de Frameworks:</li><br>
             Existem muitos frameworks populares para desenvolvimento web, como React, Angular e Vue.js. Cursos dedicados a esses frameworks podem ajudar os 
             desenvolvedores a aprenderem a construir aplicativos web mais complexos e eficientes.<br>
 
-            <br><li>Curso de Banco de Dados:</li>
-            Entender como trabalhar com bancos de dados é crucial para muitos tipos de desenvolvimento web. Cursos sobre bancos de dados SQL e NoSQL podem ser úteis.
+            <br><li>Curso de Banco de Dados:</li><br>
+            Entender como trabalhar com bancos de dados é crucial para muitos tipos de desenvolvimento web. Cursos sobre bancos de dados SQL e NoSQL podem ser úteis.<br>
 
-            <br><li>Curso de Segurança Web:</li>
+            <br><li>Curso de Segurança Web:</li><br>
             A segurança é uma preocupação importante para os desenvolvedores web. Um curso sobre segurança web pode ensinar sobre práticas recomendadas para proteger
             sites e aplicativos contra vulnerabilidades.
         </ul>
