exclusão da parceria

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <a href="sobre.html">Sobre o Emprega//DEV</a>
         <a href="trilhas.html">Trilhas</a>
         <a href="dicas.html">Dicas</a>
-        <a href="#">Mentorias</a>
-        <a href="#">Parcerias</a>
+        <a href="">Mentorias</a>
     </nav>
     <main>
         <h2>Bem vindo(a) ao Emprega //DEV a plataforma que vai te ajudar a decolar na carreira de tecnologia.</h2>
