--- a/mentoria.html
+++ b/mentoria.html
@@ -34,7 +34,7 @@
         
         <h2>Depoimentos</h2>
             <ul>
-                <li>Rodrigo</li>
+                <li>Amanda</li>
                 <p>O emprega//DEV mudou a minha vida, grato a todos os envolvidos na criação dessa obra de arte.</p>
                 <p>Estrelas *****</p>
             </ul>
