Alteração nas hrefs

--- a/desenvolvedorWeb.html
+++ b/desenvolvedorWeb.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=], initial-scale=1.0">
-    <title>Desenvolvedor Web</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Nome da função</title>
 </head>
 <body>
     <header>
@@ -55,7 +54,7 @@
         </ul>
         
         <br><h2>Média salarial:</h2>
-        <p>Segundo o site <a href=https://www.glassdoor.com.br/Sal%C3%A1rios/desenvolvedor-web-sal%C3%A1rio-SRCH_KO0,17.htm>Glassdoor</a>
+        <p>Segundo o site <a href=https://www.glassdoor.com.br/Sal%C3%A1rios/desenvolvedor-web-sal%C3%A1rio-SRCH_KO0,17.htm target="_blank">Glassdoor</a>
             um Desenvolvedor Web recebe em média R$ 2.000,00 a R$ 4.000,00/mês.<br></p> 
     </main>
     <footer>
