--- a/dicas.html
+++ b/dicas.html
@@ -20,16 +20,16 @@
     <main>
         <h2>3 Dicas de plataformas para buscar conhecimento na área de tecnologia:</h2>
         <p>Você encontrará canais no Youtube com muitos ensinamento de forma gratuita como:<br>
-            </li><a href="https://www.youtube.com/@CursoemVideo">CursoemVideo</a><br>
-            <a href="https://www.youtube.com/@Programadorbr/videos">Programador BR</a>
+            </li><a href="https://www.youtube.com/@CursoemVideo"target="_blank" >CursoemVideo</a><br>
+            <a href="https://www.youtube.com/@Programadorbr/videos"target="_blank" >Programador BR</a>
         </p>
 
         <br><br><br>
 
         <h2>3 Dicas de plataformas gratuitas para buscar vagas na área de tecnologia:</h2>
-        <p><a href="https://www.linkedin.com/search/results/all/?keywords=ti&origin=GLOBAL_SEARCH_HEADER&sid=WpO">Linkedin</a><br></p>
-        <p><a href="https://www.catho.com.br/vagas/ti/votorantim-sp/?gad_source=1&gclid=CjwKCAjwz42xBhB9EiwA48pT70gGAsGnTVcE1bXeJXghe2AGKKM0FRXzU33ISzZdNcs69CdjVKll6BoCwUwQAvD_BwE">Catho</a><br></p>
-        <p><a href="https://www.glassdoor.com.br/Vaga/ti-vagas-SRCH_KO0,2.htm">Glassdoor</a><br></p> 
+        <p><a href="https://www.linkedin.com/search/results/all/?keywords=ti&origin=GLOBAL_SEARCH_HEADER&sid=WpO"target="_blank" >Linkedin</a><br></p>
+        <p><a href="https://www.catho.com.br/vagas/ti/votorantim-sp/?gad_source=1&gclid=CjwKCAjwz42xBhB9EiwA48pT70gGAsGnTVcE1bXeJXghe2AGKKM0FRXzU33ISzZdNcs69CdjVKll6BoCwUwQAvD_BwE"target="_blank" >Catho</a><br></p>
+        <p><a href="https://www.glassdoor.com.br/Vaga/ti-vagas-SRCH_KO0,2.htm"target="_blank">Glassdoor</a><br></p> 
         
 
         <h2></h2>
