--- a/engenheiroDeSegurancaDaInformacao.html
+++ b/engenheiroDeSegurancaDaInformacao.html
@@ -63,7 +63,7 @@
         </ul>
         
         <br><h2>Média salarial:</h2>
-        <p>Segundo o site <a href=https://www.glassdoor.com.br/Sal%C3%A1rios/engenheiro-de-seguran%C3%A7a-da-informa%C3%A7%C3%A3o-sal%C3%A1rio-SRCH_KO0,37.htm>Glassdoor</a>
+        <p>Segundo o site <a href=https://www.glassdoor.com.br/Sal%C3%A1rios/engenheiro-de-seguran%C3%A7a-da-informa%C3%A7%C3%A3o-sal%C3%A1rio-SRCH_KO0,37.htm target="_blank">Glassdoor</a>
             um Engenheiro de Segurança da Informação recebe em média R$ 6.000,00 a R$ 15.000,00/mês.<br></p> 
         </main>
         <footer>
