--- a/arquitetoDeSolucoes.html
+++ b/arquitetoDeSolucoes.html
@@ -63,7 +63,7 @@
         </ul>
         
         <br><h2>Média salarial:</h2>
-        <p>Segundo o site <a href=https://www.glassdoor.com.br/Sal%C3%A1rios/arquiteto-de-solu%C3%A7%C3%B5es-sal%C3%A1rio-SRCH_KO0,21.htm>Glassdoor</a>
+        <p>Segundo o site <a href=https://www.glassdoor.com.br/Sal%C3%A1rios/arquiteto-de-solu%C3%A7%C3%B5es-sal%C3%A1rio-SRCH_KO0,21.htm target="_blank">Glassdoor</a>
             um Arquiteto de Soluções recebe em média R$ 11.000,00 a R$ 18.000,00/mês.<br></p> 
     </main>
     <footer>
