--- a/mentoria.html
+++ b/mentoria.html
@@ -34,9 +34,9 @@
         
         <h2>Depoimentos</h2>
             <ul>
-                <li>Amanda</li>
+                <li><b>Amanda</b></li>
                 <p>O emprega//DEV mudou a minha vida, grato a todos os envolvidos na criação dessa obra de arte.</p>
-                <p>Estrelas *****</p>
+                <p><b>Estrelas</b> *****</p>
             </ul>
     </main>
     <footer>
