--- a/engenheiroDeSegurancaDaInformacao.html
+++ b/engenheiroDeSegurancaDaInformacao.html
@@ -13,9 +13,8 @@
     <nav>
         <a href="sobre.html">Sobre o Emprega//DEV</a>
         <a href="trilhas.html">Trilhas</a>
-        <a href="#">Dicas</a>
-        <a href="#">Mentorias</a>
-        <a href="#">Parcerias</a>
+        <a href="dicas.html">Dicas</a>
+        <a href="mentoria.html">Mentorias</a>
     </nav>
     <main>
         <h2>Descrição das atividades</h2><br>
