--- a/mentoria.html
+++ b/mentoria.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=], initial-scale=1.0">
     <title>Mentoria</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Mentoria</h1>
     </header>
-    
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="dicas.html">Dicas</a>
+        <a href="mentoria.html">Mentorias</a>
+    </nav>
     <main>
         <h2>Tire suas dúvidas com orientação de especialistas da área.</h2>
         <p>Na Emprega//DEV, estamos comprometidos em fornecer suporte especializado para impulsionar sua jornada na tecnologia. Com nossa seção de mentorias, oferecemos acesso direto a especialistas da área de T.I, prontos para orientar e esclarecer todas as suas perguntas. Não importa se você é um aspirante a desenvolvedor, um profissional em transição de carreira ou um especialista experiente, estamos aqui para ajudar a desbloquear seu potencial. Junte-se a nós e acelere seu crescimento na indústria de tecnologia!</p>
