--- a/trilhas.html
+++ b/trilhas.html
@@ -15,9 +15,8 @@
     <nav>
         <a href="sobre.html">Sobre o Emprega//DEV</a>
         <a href="trilhas.html">Trilhas</a>
-        <a href="#">Dicas</a>
-        <a href="#">Mentorias</a>
-        <a href="#">Parcerias</a>
+        <a href="dicas.html">Dicas</a>
+        <a href="mentoria.html">Mentorias</a>
     </nav>
     <article>
     <h1>Separamos as principais trilhas de carreiras seguidas na área da tecnologia</h1>
