Criada pagina de formulário e att no dicas
Atualizado o link do canal do Curso em Video e criado protótipo da página de formulário html e css.

--- a/dicas.html
+++ b/dicas.html
@@ -18,8 +18,9 @@
     </nav>
     <main>
         <h2>Canais no Youtube para buscar conhecimento na área de tecnologia:</h2>
-        <a href="https://www.youtube.com/@CursoemVideo"target="_blank"><img src="https://i.imgur.com/UJHfIeX.png" alt="Image" height="72" width="200"></a>
         <a href="https://www.youtube.com/@Programadorbr/videos"target="_blank"><img src="https://i.imgur.com/ssMaU5p.png" alt="Image" height="72" width="200"></a>
+        <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo"target="_blank"><img src="https://i.imgur.com/UJHfIeX.png" alt="Image" height="72" width="200"></a>
+
         
 
         <h2>Plataformas gratuitas para buscar vagas na área de tecnologia:</h2>
