att <nav> incluindo "pesquisa" em todas abas

--- a/pesquisaDeUso.html
+++ b/pesquisaDeUso.html
@@ -8,6 +8,13 @@
     </head>
 
 <body>
+    <nav>
+        <a href="sobre.html">Sobre o Emprega//DEV</a>
+        <a href="trilhas.html">Trilhas</a>
+        <a href="dicas.html">Dicas</a>
+        <a href="mentoria.html">Mentorias</a>
+        <a href="pesquisaDeUso.html">Pesquisa</a>
+    </nav>
      
     <div>
         <h1>Pesquisa de Acesso</h1>
