--- a/engenheiroDeSegurancaDaInformacao.html
+++ b/engenheiroDeSegurancaDaInformacao.html
@@ -15,6 +15,7 @@
         <a href="trilhas.html">Trilhas</a>
         <a href="dicas.html">Dicas</a>
         <a href="mentoria.html">Mentorias</a>
+        <a href="pesquisaDeUso.html">Pesquisa</a>
     </nav>
     <main>
         <h2>Descrição das atividades</h2><br>
