--- a/sobre.html
+++ b/sobre.html
@@ -16,6 +16,8 @@
         <a href="trilhas.html">Trilhas</a>
         <a href="dicas.html">Dicas</a>
         <a href="mentoria.html">Mentorias</a>
+        <a href="pesquisaDeUso.html">Pesquisa</a>
+    </nav>
     </nav>
     <main>
         <h2>Sobre o Emprega</h2>
