--- a/desenvolvedorWeb.html
+++ b/desenvolvedorWeb.html
@@ -14,7 +14,7 @@
         <a href="trilhas.html">Trilhas</a>
         <a href="dicas.html">Dicas</a>
         <a href="mentoria.html">Mentorias</a>
-        <a href="pesquisaDeUso.html">Pesquisa</a>
+        <a href="formulario.php">Pesquisa</a>
     </nav>
     <main>
         <h2>Descrição das atividades</h2>
