--- a/mentoria.html
+++ b/mentoria.html
@@ -15,7 +15,7 @@
         <a href="trilhas.html">Trilhas</a>
         <a href="dicas.html">Dicas</a>
         <a href="mentoria.html">Mentorias</a>
-        <a href="pesquisaDeUso.html">Pesquisa</a>
+        <a href="formulario.php">Pesquisa</a>
     </nav>
     <main>
         <h2>Tire suas dúvidas com orientação de especialistas da área</h2>
