update db para localhost

--- a/trilhas.html
+++ b/trilhas.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Emprega // DEV</h1>
+        <h1>Trilhas</h1>
         <p>É tech pra você aproveitar e decolar </p>
     </header>
     <nav>
