--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Emprega // DEV</h1>
+            <img src="EMPREGA-Photoroom.png-Photoroom.png" alt="Logo">
         <p>É tech pra você aproveitar e decolar </p>
     </header>
     <nav>
