--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="EMPREGA-Photoroom.png-Photoroom.png" alt="Logo">
+        <img src="https://i.imgur.com/ofexIZt.png" alt="Logo">
         <p>É tech pra você aproveitar e decolar</p>
     </header>
     <nav>
