--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <img src="https://i.imgur.com/ofexIZt.png" alt="Logo">
-        <p>É tech pra você aproveitar e decolar</p>
+        <p><strong>É TECH PRA VOCÊ APROVEITAR E DECOLAR</strong></p>
     </header>
     <nav>
         <a href="sobre.html">Sobre o Emprega//DEV</a>
