--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <p><strong>É TECH PRA VOCÊ APROVEITAR E DECOLAR</strong></p>
     </header>
     <nav>
-        <a href="sobre.html">Sobre o Emprega//DEV</a>
-        <a href="trilhas.html">Trilhas</a>
-        <a href="dicas.html">Dicas</a>
-        <a href="mentoria.html">Mentorias</a>
-        <a href="formulario.php">Pesquisa</a>
+        <a href="sobre.html"><strong>Sobre o Emprega//DEV</strong></a>
+        <a href="trilhas.html"><strong>Trilhas</strong></a>
+        <a href="dicas.html"><strong>Dicas</strong></a>
+        <a href="mentoria.html"><strong>Mentorias</strong></a>
+        <a href="formulario.php"><strong>Pesquisa</strong></a>
     </nav>
     <main>
         <h2>Bem vindo(a) ao Emprega //DEV a plataforma que vai te ajudar a decolar na carreira de tecnologia.</h2>
         <p>Vamos embarcar juntos nessa missão e conquistar sua primeira oportunidade no mercado de tecnologia.</p>
-        <p>Aqui você encontra tudo que precisa saber sobre as carreiras que são possiveis seguir na área de tecnologia, nossa missão é ajudar você a encontrar qual carreira faz match com seu perfil e te orientar o que é necessário aprender para seguir carreira na área escolhida por você.</p>
-        <p>Sim, aqui você vai conhecer melhor cada carreira na área de tecnologia e é você que escolhe onde vai trilhar no caminh do sucesso</p>
+        <p>Aqui você encontra tudo que precisa saber sobre as carreiras que são possiveis seguir na área de tecnologia, nossa missão é ajudar você a encontrar qual carreira faz match com seu perfil e te orientar o que é necessário aprender para seguir carreira na área escolhida por você.
+        Sim, aqui você vai conhecer melhor cada carreira na área de tecnologia e é você que escolhe onde vai trilhar no caminh do sucesso</p>
 
         <h2>Nosso papel</h2>
         <p>Embarcar com você nesse sonho e trazer ele para sua realidade, o que realmente é necessário para atuar na carreira escolhida</p>
