--- a/index.html
+++ b/index.html
@@ -21,32 +21,19 @@
     </nav>
     <main>
         <h2>Bem vindo(a) ao Emprega //DEV a plataforma que vai te ajudar a decolar na carreira de tecnologia.</h2>
-        <p>Vamos embarcar juntos nessa missão e conquistar sua primeira oportunidade no mercado de tecnologia.</p>
-        <p>Aqui você encontra tudo que precisa saber sobre as carreiras que são possiveis seguir na área de tecnologia, nossa missão é ajudar você a encontrar qual carreira faz match com seu perfil e te orientar o que é necessário aprender para seguir carreira na área escolhida por você.
+        <p>Vamos embarcar juntos nessa missão e conquistar sua primeira oportunidade no mercado de tecnologia. Aqui você encontra tudo que precisa saber sobre as carreiras que são possiveis seguir na área de tecnologia, nossa missão é ajudar você a encontrar qual carreira faz match com seu perfil e te orientar o que é necessário aprender para seguir carreira na área escolhida por você.
         Sim, aqui você vai conhecer melhor cada carreira na área de tecnologia e é você que escolhe onde vai trilhar no caminh do sucesso</p>
 
         <h2>Nosso papel</h2>
-        <p>Embarcar com você nesse sonho e trazer ele para sua realidade, o que realmente é necessário para atuar na carreira escolhida</p>
-        <p>O melhor nossa plataforma é totalmente gratuita</p>
+        <p>Embarcar com você nesse sonho e trazer ele para sua realidade, o que realmente é necessário para atuar na carreira escolhida. O melhor nossa plataforma é totalmente gratuita</p>
 
-        <h2>Notícias do Mercado</h2>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum voluptas, illo ad veniam nostrum itaque iure porro accusamus, doloremque, sint explicabo corrupti libero recusandae perspiciatis voluptatibus incidunt sequi veritatis. A? <br>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi provident pariatur, asperiores natus magni impedit non, fugit laboriosam temporibus consequuntur at totam incidunt eaque, rerum assumenda beatae eum sed esse?
+        <h2>Sobre o Mercado</h2>
+        <p> O mercado de tecnologia atual está em rápida evolução, impulsionado por avanços em inteligência artificial, computação em nuvem, internet das coisas (IoT) e 5G. Grandes empresas como Apple, Microsoft, Google e Amazon lideram a inovação, enquanto startups emergem com soluções disruptivas. A IA está se tornando central em diversos setores, a computação em nuvem continua crescendo, e a IoT permite maior controle e monitoramento em tempo real. A implementação do 5G expande a capacidade das redes móveis, habilitando novos serviços, enquanto a segurança cibernética e a sustentabilidade ganham importância crescente. Em resumo, a tecnologia está transformando indústrias e alterando a maneira como vivemos e trabalhamos, com foco em segurança, sustentabilidade e conectividade. 
         </p>
 
-        <picture>
-            <source> <!--colocar a responsividade da imagem -->
-            <img src="#" alt="#">
-        </picture>
-
-        <h2>Destaques na tecnologia</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium mollitia deleniti fugit natus cumque dolores sequi. Atque reprehenderit qui inventore pariatur est minus temporibus. Dolor possimus qui dolores nostrum iste? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga id vel dolorum eaque suscipit. Saepe facilis iste blanditiis, sequi eaque soluta rerum cum sunt corporis asperiores ullam minus fugit amet?  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, iure provident. Hic vitae eum nostrum ipsum non repellat, nihil delectus accusantium nisi quasi iusto commodi. A iusto ab quidem quo?</p>
-        
-        <picture>
-            <source> <!--colocar a responsividade da imagem -->
-            <img src="#" alt="#">
-        </picture>
-    </main>
+        <img src="https://i.imgur.com/YdGzH3k.png" alt="Pessoas">
+             
+        </main>
     <footer>
        Site desenvolvido para UPX 2
     </footer> 
