--- a/sobre.html
+++ b/sobre.html
@@ -25,15 +25,11 @@
         <p>Além disso, proporciona uma experiência interativa através de dicas práticas, recursos educacionais e conteúdos exclusivos. Os usuários também têm a oportunidade de participar de videochamadas com profissionais experientes da indústria de tecnologia durante eventos de mentoria ao vivo, onde podem tirar dúvidas, receber orientações e insights valiosos sobre suas carreiras.</p>
         <p>Um dos diferenciais do Emprega //DEV é a parceria com a Faculdade Facens Sorocaba, que atua como patrocinador da plataforma. Essa colaboração fortalece o acesso dos usuários a cursos de qualidade e oferece oportunidades adicionais de desenvolvimento profissional por meio de programas educacionais específicos.</p>
         <p>Com uma abordagem abrangente e colaborativa, o Emprega //DEV visa orientar indivíduos interessados em ingressar ou progredir na área de tecnologia, proporcionando-lhes as ferramentas e o suporte necessário para alcançar o sucesso em suas carreiras.</p>
-   </main>
+   
+     <img src="https://i.imgur.com/ofexIZt.png" alt="logo">
+    </main>
 
-   <picture>
-
-    
-   </picture>
-
-
-<footer>
+ <footer>
     Site desenvolvido para UPX 2
  </footer> 
 </body>
