--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <header>
-        <img src="https://i.imgur.com/ofexIZt.png" alt="Logo">
-        <p><strong>É TECH PRA VOCÊ APROVEITAR E DECOLAR</strong></p>
+        <a href="index.html"><img src="https://i.imgur.com/ofexIZt.png" alt="logo"></a>
+        <div>
+            <h1>EMPREGA //DEV</h1>
+            <p>É tech pra você aproveitar e decolar</p>
+        </div>
     </header>
     <nav>
         <a href="sobre.html"><strong>Sobre o Emprega//DEV</strong></a>
