--- a/sobre.html
+++ b/sobre.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Emprega // DEV</h1>
-        <p>É tech pra você aproveitar e decolar </p>
+        <a href="index.html"><img src="https://i.imgur.com/ofexIZt.png" alt="logo"></a>
+        <div>
+            <h1>SOBRE</h1>
+            <p>É tech pra você aproveitar e decolar</p>
+        </div>
     </header>
     <nav>
         <a href="sobre.html">Sobre o Emprega//DEV</a>
