--- a/desenvolvedorWeb.html
+++ b/desenvolvedorWeb.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=], initial-scale=1.0">
-    <title>Nome da função</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=], initial-scale=1.0">
+        <title>Arquiteto de Soluções</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 <body>
     <header>
-        <h1>Desenvolvedor Web</h1>
+        <a href="index.html"><img src="https://i.imgur.com/ofexIZt.png" alt="logo"></a>
+        <div>
+            <h1>Desenvolvedor Web</h1>
+        </div>
     </header>
     <nav>
         <a href="sobre.html">Sobre o Emprega//DEV</a>
