--- a/mentoria.html
+++ b/mentoria.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <header>
-        <h1>Mentoria</h1>
+        <a href="index.html"><img src="https://i.imgur.com/ofexIZt.png" alt="logo"></a>
+        <div>
+            <h1>EMPREGA //DEV</h1>
+            <p>É tech pra você aproveitar e decolar</p>
+        </div>
     </header>
-    <nav>
+        <nav>
         <a href="sobre.html">Sobre o Emprega//DEV</a>
         <a href="trilhas.html">Trilhas</a>
         <a href="dicas.html">Dicas</a>
