--- a/sobre.html
+++ b/sobre.html
@@ -10,11 +10,11 @@
     <header>
         <a href="index.html"><img src="https://i.imgur.com/ofexIZt.png" alt="logo"></a>
         <div>
-            <h1>SOBRE</h1>
+            <h1>EMPREGA //DEV</h1>
             <p>É tech pra você aproveitar e decolar</p>
         </div>
     </header>
-    <nav>
+        <nav>
         <a href="sobre.html">Sobre o Emprega//DEV</a>
         <a href="trilhas.html">Trilhas</a>
         <a href="dicas.html">Dicas</a>
