--- a/arquitetoDeSolucoes.html
+++ b/arquitetoDeSolucoes.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Arquiteto de Soluções</h1>
+        <a href="index.html"><img src="https://i.imgur.com/ofexIZt.png" alt="logo"></a>
+        <div>
+            <h1>Arquiteto de Soluções</h1>
+        </div>
     </header>
     <nav>
         <a href="sobre.html">Sobre o Emprega//DEV</a>
