--- a/engenheiroDeSegurancaDaInformacao.html
+++ b/engenheiroDeSegurancaDaInformacao.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Engenheiro de Segurança da Informação</h1>
+        <a href="index.html"><img src="https://i.imgur.com/ofexIZt.png" alt="logo"></a>
+        <div>
+            <h1>Engenheiro de Segurança da Informação</h1>
+        </div>
     </header>
-    <nav>
+        <nav>
         <a href="sobre.html">Sobre o Emprega//DEV</a>
         <a href="trilhas.html">Trilhas</a>
         <a href="dicas.html">Dicas</a>
