--- a/trilhas.html
+++ b/trilhas.html
@@ -9,10 +9,13 @@
 
 <body>
     <header>
-        <h1>Trilhas</h1>
-        <p>É tech pra você aproveitar e decolar </p>
+        <a href="index.html"><img src="https://i.imgur.com/ofexIZt.png" alt="logo"></a>
+        <div>
+            <h1>EMPREGA //DEV</h1>
+            <p>É tech pra você aproveitar e decolar</p>
+        </div>
     </header>
-    <nav>
+        <nav>
         <a href="sobre.html">Sobre o Emprega//DEV</a>
         <a href="trilhas.html">Trilhas</a>
         <a href="dicas.html">Dicas</a>
