--- a/dicas.html
+++ b/dicas.html
@@ -15,11 +15,11 @@
         </div>
     </header>
         <nav>
-        <a href="sobre.html">Sobre o Emprega//DEV</a>
-        <a href="trilhas.html">Trilhas</a>
-        <a href="dicas.html">Dicas</a>
-        <a href="mentoria.html">Mentorias</a>
-        <a href="formulario.php">Pesquisa</a>
+        <a href="sobre.html"><strong>Sobre o Emprega//DEV</strong></a>
+        <a href="trilhas.html"><strong>Trilhas</strong></a>
+        <a href="dicas.html"><strong>Dicas</strong></a>
+        <a href="mentoria.html"><strong>Mentorias</strong></a>
+        <a href="formulario.php"><strong>Pesquisa</strong></a>
     </nav>
     <main>
         
