--- a/sobre.html
+++ b/sobre.html
@@ -15,14 +15,13 @@
         </div>
     </header>
         <nav>
-        <a href="sobre.html">Sobre o Emprega//DEV</a>
-        <a href="trilhas.html">Trilhas</a>
-        <a href="dicas.html">Dicas</a>
-        <a href="mentoria.html">Mentorias</a>
-        <a href="formulario.php">Pesquisa</a>
+        <a href="sobre.html"><strong>Sobre o Emprega//DEV</strong></a>
+        <a href="trilhas.html"><strong>Trilhas</strong></a>
+        <a href="dicas.html"><strong>Dicas</strong></a>
+        <a href="mentoria.html"><strong>Mentorias</strong></a>
+        <a href="formulario.php"><strong>Pesquisa</strong></a>
     </nav>
-    </nav>
-    <main>
+        <main>
         <h2>Sobre o Emprega</h2>
         <p>É uma plataforma dedicada a orientar e facilitar a jornada profissional na área de tecnologia. Ele oferece trilhas de carreira personalizadas, auxiliando os usuários a identificar os cursos e formações necessárias para alcançar seus objetivos profissionais. Ao escolher uma trilha específica, os candidatos recebem recomendações sobre os cursos mais relevantes e as habilidades essenciais a serem desenvolvidas.</p>
         <p>Além disso, proporciona uma experiência interativa através de dicas práticas, recursos educacionais e conteúdos exclusivos. Os usuários também têm a oportunidade de participar de videochamadas com profissionais experientes da indústria de tecnologia durante eventos de mentoria ao vivo, onde podem tirar dúvidas, receber orientações e insights valiosos sobre suas carreiras.</p>
